--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^15.7.1",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "^6.0.0",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.8.0",
     "web-vitals": "^2.1.4"
   },
@@ -49,10 +49,16 @@
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.0",
+    "typescript": "^4.9.5",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/node": "^20.0.0"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "resolutions": {
+    "typescript": "^4.9.5"
+  },
+  "overrides": {
+    "typescript": "^4.9.5"
+  }
 }
