ToLowrcase error fixed

--- a/env.example
+++ b/env.example
@@ -1,5 +1,6 @@
 # API Configuration
+# For local development
 REACT_APP_API_URL=http://localhost:5000
 
-# For production, change to your actual API URL
-# REACT_APP_API_URL=https://your-api-domain.com
+# For production (uncomment when deploying)
+# REACT_APP_API_URL=https://shflyappapi.onrender.com
